src/omdParser/OMDParser.py
# Generated from OMD.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OMDParser ( Parser ):

    grammarFileName = "OMD.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'component'", "'molecule'", "'zconstraint'", 
                     "'restraint'", "'atom'", "'bond'", "'bend'", "'torsion'", 
                     "'inversion'", "'rigidBody'", "'cutoffGroup'", "'constraint'", 
                     "'distance'", "'fragment'", "'sequence'", "'members'", 
                     "'center'", "'satellites'", "'position'", "'orientation'", 
                     "'flucQ'", "'RNEMD'", "'light'", "'minimizer'", "'Fixed'", 
                     "'Harmonic'", "'Cubic'", "'Quartic'", "'Polynomial'", 
                     "'Morse'", "'GhostBend'", "'UreyBradley'", "'Cosine'", 
                     "'GhostTorsion'", "'Charmm'", "'Opls'", "'Trappe'", 
                     "'AmberImproper'", "'ImproperCosine'", "'CentralAtomHeight'", 
                     "'Dreiding'", "'charge'", "'nodes'", "'='", "':'", 
                     "','", "'?'", "';'", "'.'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "COMPONENT", "MOLECULE", "ZCONSTRAINT", 
                      "RESTRAINT", "ATOM", "BOND", "BEND", "TORSION", "INVERSION", 
                      "RIGIDBODY", "CUTOFFGROUP", "CONSTRAINT", "DISTANCE", 
                      "FRAGMENT", "SEQUENCE", "MEMBERS", "CENTER", "SATELLITES", 
                      "POSITION", "ORIENTATION", "FLUCQ", "RNEMD", "LIGHT", 
                      "MINIMIZER", "FIXED", "HARMONIC", "CUBIC", "QUARTIC", 
                      "POLYNOMIAL", "MORSE", "GHOSTBEND", "UREYBRADLEY", 
                      "COSINE", "GHOSTTORSION", "CHARMM", "OPLS", "TRAPPE", 
                      "AMBERIMPROPER", "IMPROPERCOSINE", "CENTRALATOMHEIGHT", 
                      "DREIDING", "CHARGE", "NODES", "ASSIGNEQUAL", "COLON", 
                      "COMMA", "QUESTIONMARK", "SEMICOLON", "DOT", "LPAREN", 
                      "RPAREN", "LBRACKET", "RBRACKET", "LCURLY", "RCURLY", 
                      "NUM_LONG", "NUM_INT", "NUM_FLOAT", "NUM_DOUBLE", 
                      "CharLiteral", "StringLiteral", "ID", "Whitespace", 
                      "Newline", "LineContinuation", "Comment", "CPPComment", 
                      "PREPROC_DIRECTIVE" ]

    RULE_omdfile = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_constant = 3
    RULE_componentblock = 4
    RULE_zconstraintblock = 5
    RULE_restraintblock = 6
    RULE_flucqblock = 7
    RULE_rnemdblock = 8
    RULE_lightblock = 9
    RULE_minimizerblock = 10
    RULE_moleculeblock = 11
    RULE_moleculestatement = 12
    RULE_atomblock = 13
    RULE_atomstatement = 14
    RULE_bondblock = 15
    RULE_bondstatement = 16
    RULE_bendblock = 17
    RULE_bendstatement = 18
    RULE_torsionblock = 19
    RULE_torsionstatement = 20
    RULE_inversionblock = 21
    RULE_inversionstatement = 22
    RULE_rigidbodyblock = 23
    RULE_rigidbodystatement = 24
    RULE_cutoffgroupblock = 25
    RULE_cutoffgroupstatement = 26
    RULE_nodesblock = 27
    RULE_nodesstatement = 28
    RULE_fragmentblock = 29
    RULE_fragmentstatement = 30
    RULE_constraintblock = 31
    RULE_constraintstatement = 32
    RULE_sequencestring = 33
    RULE_doubleNumberTuple = 34
    RULE_inttuple = 35
    RULE_intConst = 36
    RULE_doubleNumber = 37
    RULE_floatConst = 38
    RULE_vectorConst = 39

    ruleNames =  [ "omdfile", "statement", "assignment", "constant", "componentblock", 
                   "zconstraintblock", "restraintblock", "flucqblock", "rnemdblock", 
                   "lightblock", "minimizerblock", "moleculeblock", "moleculestatement", 
                   "atomblock", "atomstatement", "bondblock", "bondstatement", 
                   "bendblock", "bendstatement", "torsionblock", "torsionstatement", 
                   "inversionblock", "inversionstatement", "rigidbodyblock", 
                   "rigidbodystatement", "cutoffgroupblock", "cutoffgroupstatement", 
                   "nodesblock", "nodesstatement", "fragmentblock", "fragmentstatement", 
                   "constraintblock", "constraintstatement", "sequencestring", 
                   "doubleNumberTuple", "inttuple", "intConst", "doubleNumber", 
                   "floatConst", "vectorConst" ]

    EOF = Token.EOF
    COMPONENT=1
    MOLECULE=2
    ZCONSTRAINT=3
    RESTRAINT=4
    ATOM=5
    BOND=6
    BEND=7
    TORSION=8
    INVERSION=9
    RIGIDBODY=10
    CUTOFFGROUP=11
    CONSTRAINT=12
    DISTANCE=13
    FRAGMENT=14
    SEQUENCE=15
    MEMBERS=16
    CENTER=17
    SATELLITES=18
    POSITION=19
    ORIENTATION=20
    FLUCQ=21
    RNEMD=22
    LIGHT=23
    MINIMIZER=24
    FIXED=25
    HARMONIC=26
    CUBIC=27
    QUARTIC=28
    POLYNOMIAL=29
    MORSE=30
    GHOSTBEND=31
    UREYBRADLEY=32
    COSINE=33
    GHOSTTORSION=34
    CHARMM=35
    OPLS=36
    TRAPPE=37
    AMBERIMPROPER=38
    IMPROPERCOSINE=39
    CENTRALATOMHEIGHT=40
    DREIDING=41
    CHARGE=42
    NODES=43
    ASSIGNEQUAL=44
    COLON=45
    COMMA=46
    QUESTIONMARK=47
    SEMICOLON=48
    DOT=49
    LPAREN=50
    RPAREN=51
    LBRACKET=52
    RBRACKET=53
    LCURLY=54
    RCURLY=55
    NUM_LONG=56
    NUM_INT=57
    NUM_FLOAT=58
    NUM_DOUBLE=59
    CharLiteral=60
    StringLiteral=61
    ID=62
    Whitespace=63
    Newline=64
    LineContinuation=65
    Comment=66
    CPPComment=67
    PREPROC_DIRECTIVE=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class OmdfileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OMDParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OMDParser.StatementContext)
            else:
                return self.getTypedRuleContext(OMDParser.StatementContext,i)


        def getRuleIndex(self):
            return OMDParser.RULE_omdfile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOmdfile" ):
                listener.enterOmdfile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOmdfile" ):
                listener.exitOmdfile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOmdfile" ):
                return visitor.visitOmdfile(self)
            else:
                return visitor.visitChildren(self)




    def omdfile(self):

        localctx = OMDParser.OmdfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_omdfile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4611686018458861598) != 0):
                self.state = 80
                self.statement()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(OMDParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(OMDParser.AssignmentContext,0)


        def componentblock(self):
            return self.getTypedRuleContext(OMDParser.ComponentblockContext,0)


        def moleculeblock(self):
            return self.getTypedRuleContext(OMDParser.MoleculeblockContext,0)


        def fragmentblock(self):
            return self.getTypedRuleContext(OMDParser.FragmentblockContext,0)


        def zconstraintblock(self):
            return self.getTypedRuleContext(OMDParser.ZconstraintblockContext,0)


        def restraintblock(self):
            return self.getTypedRuleContext(OMDParser.RestraintblockContext,0)


        def flucqblock(self):
            return self.getTypedRuleContext(OMDParser.FlucqblockContext,0)


        def rnemdblock(self):
            return self.getTypedRuleContext(OMDParser.RnemdblockContext,0)


        def lightblock(self):
            return self.getTypedRuleContext(OMDParser.LightblockContext,0)


        def minimizerblock(self):
            return self.getTypedRuleContext(OMDParser.MinimizerblockContext,0)


        def getRuleIndex(self):
            return OMDParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = OMDParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [62]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.assignment()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.componentblock()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.moleculeblock()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.fragmentblock()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.zconstraintblock()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.restraintblock()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 7)
                self.state = 94
                self.flucqblock()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 8)
                self.state = 95
                self.rnemdblock()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 9)
                self.state = 96
                self.lightblock()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 10)
                self.state = 97
                self.minimizerblock()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(OMDParser.ID, 0)

        def ASSIGNEQUAL(self):
            return self.getToken(OMDParser.ASSIGNEQUAL, 0)

        def constant(self):
            return self.getTypedRuleContext(OMDParser.ConstantContext,0)


        def SEMICOLON(self):
            return self.getToken(OMDParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return OMDParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = OMDParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(OMDParser.ID)
            self.state = 101
            self.match(OMDParser.ASSIGNEQUAL)
            self.state = 102
            self.constant()
            self.state = 103
            self.match(OMDParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intConst(self):
            return self.getTypedRuleContext(OMDParser.IntConstContext,0)


        def floatConst(self):
            return self.getTypedRuleContext(OMDParser.FloatConstContext,0)


        def vectorConst(self):
            return self.getTypedRuleContext(OMDParser.VectorConstContext,0)


        def ID(self):
            return self.getToken(OMDParser.ID, 0)

        def StringLiteral(self):
            return self.getToken(OMDParser.StringLiteral, 0)

        def getRuleIndex(self):
            return OMDParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant" ):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = OMDParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constant)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [56, 57]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.intConst()
                pass
            elif token in [58, 59]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.floatConst()
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.vectorConst()
                pass
            elif token in [62]:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.match(OMDParser.ID)
                pass
            elif token in [61]:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.match(OMDParser.StringLiteral)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPONENT(self):
            return self.getToken(OMDParser.COMPONENT, 0)

        def LCURLY(self):
            return self.getToken(OMDParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(OMDParser.RCURLY, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OMDParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(OMDParser.AssignmentContext,i)


        def getRuleIndex(self):
            return OMDParser.RULE_componentblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponentblock" ):
                listener.enterComponentblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponentblock" ):
                listener.exitComponentblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponentblock" ):
                return visitor.visitComponentblock(self)
            else:
                return visitor.visitChildren(self)




    def componentblock(self):

        localctx = OMDParser.ComponentblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_componentblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(OMDParser.COMPONENT)
            self.state = 113
            self.match(OMDParser.LCURLY)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==62:
                self.state = 114
                self.assignment()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(OMDParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ZconstraintblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ZCONSTRAINT(self):
            return self.getToken(OMDParser.ZCONSTRAINT, 0)

        def LCURLY(self):
            return self.getToken(OMDParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(OMDParser.RCURLY, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OMDParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(OMDParser.AssignmentContext,i)


        def getRuleIndex(self):
            return OMDParser.RULE_zconstraintblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterZconstraintblock" ):
                listener.enterZconstraintblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitZconstraintblock" ):
                listener.exitZconstraintblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitZconstraintblock" ):
                return visitor.visitZconstraintblock(self)
            else:
                return visitor.visitChildren(self)




    def zconstraintblock(self):

        localctx = OMDParser.ZconstraintblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_zconstraintblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(OMDParser.ZCONSTRAINT)
            self.state = 123
            self.match(OMDParser.LCURLY)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==62:
                self.state = 124
                self.assignment()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(OMDParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RestraintblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RESTRAINT(self):
            return self.getToken(OMDParser.RESTRAINT, 0)

        def LCURLY(self):
            return self.getToken(OMDParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(OMDParser.RCURLY, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OMDParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(OMDParser.AssignmentContext,i)


        def getRuleIndex(self):
            return OMDParser.RULE_restraintblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRestraintblock" ):
                listener.enterRestraintblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRestraintblock" ):
                listener.exitRestraintblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRestraintblock" ):
                return visitor.visitRestraintblock(self)
            else:
                return visitor.visitChildren(self)




    def restraintblock(self):

        localctx = OMDParser.RestraintblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_restraintblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(OMDParser.RESTRAINT)
            self.state = 133
            self.match(OMDParser.LCURLY)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==62:
                self.state = 134
                self.assignment()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(OMDParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FlucqblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLUCQ(self):
            return self.getToken(OMDParser.FLUCQ, 0)

        def LCURLY(self):
            return self.getToken(OMDParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(OMDParser.RCURLY, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OMDParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(OMDParser.AssignmentContext,i)


        def getRuleIndex(self):
            return OMDParser.RULE_flucqblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlucqblock" ):
                listener.enterFlucqblock(self)
